--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Tools - Handy online tools for developers</title>
-    <meta itemprop="name" content="IT Tools - Handy online tools for developers" />
+    <title>LocalJson Tools - Handy online tools for developers</title>
+    <meta itemprop="name" content="LocalJson Tools - Handy online tools for developers" />
     <meta
       name="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Collection of handy online tools for developers, with great UX. LocalJson Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
     <meta
       itemprop="description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Collection of handy online tools for developers, with great UX. LocalJson Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
     <link rel="author" href="humans.txt" />
-    <link rel="canonical" href="https://it-tools.tech" />
+    <link rel="canonical" href="https://localjson.com" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -24,26 +24,26 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta property="og:url" content="https://it-tools.tech/" />
+    <meta property="og:url" content="https://localjson.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="IT Tools - Handy online tools for developers" />
+    <meta property="og:title" content="LocalJson Tools - Handy online tools for developers" />
     <meta
       property="og:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Collection of handy online tools for developers, with great UX. LocalJson Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
-    <meta property="og:image" content="https://it-tools.tech/banner.png?v=2" />
+    <meta property="og:image" content="https://localjson.com/banner.png?v=2" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ittoolsdottech" />
     <meta name="twitter:creator" content="@cthmsst" />
 
-    <meta name="twitter:title" content="IT Tools - Handy online tools for developers" />
+    <meta name="twitter:title" content="LocalJson Tools - Handy online tools for developers" />
     <meta
       name="twitter:description"
-      content="Collection of handy online tools for developers, with great UX. IT Tools is a free and open-source collection of handy online tools for developers & people working in IT."
+      content="Collection of handy online tools for developers, with great UX. LocalJson Tools is a free and open-source collection of handy online tools for developers & people working in IT."
     />
-    <meta name="twitter:image" content="https://it-tools.tech/banner.png?v=2" />
-    <meta name="twitter:image:alt" content="IT Tools - Handy online tools for developers" />
+    <meta name="twitter:image" content="https://localjson.com/banner.png?v=2" />
+    <meta name="twitter:image:alt" content="LocalJson Tools - Handy online tools for developers" />
   </head>
   <body>
     <div id="app"></div>
